--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -15,5 +15,5 @@ jobs:
             - name: Install packages
               run: $CONDA/bin/conda env update -f environment.yml --name base
             - name: Run pytest
-              run: cd test && pytest
+              run: cd test && $CONDA/bin/pytest
 
