fix train.py, test.py, and data package lint

--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,6 @@
 [flake8]
-exclude = .git, __pycache__
+# ignore "module level imports have to be at top"
+ignore = E402
+exclude = .git, __pycache__, checkpoints
 count = True
 max-line-length=80
